--- a/dog_profile_demo/.env.example
+++ b/dog_profile_demo/.env.example
@@ -2,33 +2,33 @@
 # Flask Application Settings
 # -----------------------------
 FLASK_ENV=development
-SECRET_KEY=CHANGE_ME              # generate a real secret and put in .env only
-PORT=5000                         # or 3000 if you prefer
+SECRET_KEY=CHANGE_ME
+PORT=5000
 
 # -----------------------------
-# Database (Render PostgreSQL)
+# Optional PostgreSQL (Render)
 # -----------------------------
-# Example format:
-# postgres://username:password@host:5432/dbname
 DATABASE_URL=postgres://USER:PASSWORD@HOST:5432/DATABASE_NAME
 
 # -----------------------------
-# AWS S3 Configuration
+# Cloudinary Configuration
 # -----------------------------
-AWS_REGION=us-east-1
-AWS_ACCESS_KEY_ID=CHANGE_ME       # put the real value ONLY in .env on Render
-AWS_SECRET_ACCESS_KEY=CHANGE_ME   # never commit the real credentials
-S3_BUCKET=your-bucket-name
-S3_PUBLIC_BASE=https://your-bucket-name.s3.amazonaws.com
+# Single URL format:
+CLOUDINARY_URL=cloudinary://156992513834538:CHANGE_ME@dryspquhv
 
-# Optional: If you plan to use presigned URLs
-S3_UPLOAD_PREFIX=shots
+# Or as separate values:
+CLOUDINARY_CLOUD_NAME=dryspquhv
+CLOUDINARY_API_KEY=156992513834538
+CLOUDINARY_API_SECRET=CHANGE_ME
+
+# Folder organization inside Cloudinary
+CLOUDINARY_FOLDER=dogs/images
 
 # -----------------------------
 # Upload & File Limits
 # -----------------------------
-MAX_CONTENT_LENGTH=10_000_000     # Max upload size (10 MB)
-ALLOWED_FILE_TYPES=pdf,jpg,jpeg,png
+MAX_CONTENT_LENGTH=10000000
+ALLOWED_FILE_TYPES=png,jpg,jpeg,gif,webp
 
 # -----------------------------
 # Optional Email/Notifications
@@ -38,3 +38,4 @@ MAIL_PORT=587
 MAIL_USE_TLS=True
 MAIL_USERNAME=CHANGE_ME
 MAIL_PASSWORD=CHANGE_ME
+
