--- a/dog_profile_demo/requirements.txt
+++ b/dog_profile_demo/requirements.txt
@@ -4,7 +4,7 @@ gunicorn==21.2.0
 python-dotenv==1.0.1
 cloudinary==1.41.0
 Pillow==10.4.0
-psycopg[binary]==3.1.18
+psycopg[binary]>=3.2.2,<3.3
 
 
 
