Enhance .env.example with Cloudinary settings
Updated .env.example to include additional Cloudinary folder and allowed file types.

--- a/dog_profile_demo/.env.example
+++ b/dog_profile_demo/.env.example
@@ -8,6 +8,8 @@ PORT=5000
 # -----------------------------
 # Optional PostgreSQL (Render)
 # -----------------------------
+# Example:
+# postgres://username:password@host:5432/dbname
 DATABASE_URL=postgres://USER:PASSWORD@HOST:5432/DATABASE_NAME
 
 # -----------------------------
@@ -16,19 +18,22 @@ DATABASE_URL=postgres://USER:PASSWORD@HOST:5432/DATABASE_NAME
 # Single URL format:
 CLOUDINARY_URL=cloudinary://156992513834538:CHANGE_ME@dryspquhv
 
-# Or as separate values:
+# Or separate values:
 CLOUDINARY_CLOUD_NAME=dryspquhv
 CLOUDINARY_API_KEY=156992513834538
 CLOUDINARY_API_SECRET=CHANGE_ME
 
 # Folder organization inside Cloudinary
-CLOUDINARY_FOLDER=dogs/images
+CLOUDINARY_FOLDER=dogs/images        # where photos go
+CLOUDINARY_DOC_FOLDER=dogs/docs      # where uploaded PDFs/DOCX/etc. go
 
 # -----------------------------
 # Upload & File Limits
 # -----------------------------
-MAX_CONTENT_LENGTH=10000000
-ALLOWED_FILE_TYPES=png,jpg,jpeg,gif,webp
+MAX_CONTENT_LENGTH=10000000          # 10 MB
+
+# Allowed types for front-end validation (images + documents)
+ALLOWED_FILE_TYPES=png,jpg,jpeg,gif,webp,pdf,doc,docx,xls,xlsx,csv,txt
 
 # -----------------------------
 # Optional Email/Notifications
@@ -38,4 +43,5 @@ MAIL_PORT=587
 MAIL_USE_TLS=True
 MAIL_USERNAME=CHANGE_ME
 MAIL_PASSWORD=CHANGE_ME
+
 
